Update navigation bar when a user is logged in
